add steam multis

--- a/src/main/resources/assets/wfcore/lang/en_us.lang
+++ b/src/main/resources/assets/wfcore/lang/en_us.lang
@@ -4,3 +4,9 @@ gregtech.material.dirt=Dirt
 #Multiblocks
 wfcore.machine.projector.name=Projector
 wfcore.machine.projector.tooltip=The physical culmination of your journey has the power to tear the gods apart
+wfcore.machine.largesteamforgehammer.name=Large Steam Forge Hammer
+wfcore.machine.largesteamcompressor.name=Large Steam Compressor
+wfcore.machine.largesteamwasher.name=Large Steam Washer
+wfcore.machine.largesteamcentrifuge.name=Large Steam Centrifuge
+wfcore.machine.largesteammixer.name=Large Steam Mixer
+
