--- a/src/main/resources/assets/wfcore/lang/en_us.lang
+++ b/src/main/resources/assets/wfcore/lang/en_us.lang
@@ -13,3 +13,4 @@ wfcore.machine.steam_wiremill.name=Steam Wiremill
 wfcore.machine.steam_wiremill.tooltip=Lrdshittic coding
 recipemap.steam_wiremill.name=Steam Wiremill
 
+gregtech.machine.boiler_tower.height=Stack Height: %s §9blocks
