--- a/src/main/resources/assets/wfcore/lang/en_us.lang
+++ b/src/main/resources/assets/wfcore/lang/en_us.lang
@@ -11,6 +11,8 @@ wfcore.machine.largesteamcentrifuge.name=Large Steam Centrifuge
 wfcore.machine.largesteammixer.name=Large Steam Mixer
 wfcore.machine.steam_wiremill.name=Steam Wiremill
 wfcore.machine.steam_wiremill.tooltip=Lrdshittic coding
+wfcore.machine.largeblastfurnace.name=Large Blast Furnace
+wfcore.machine.largeblastfurnace.tooltip=Made by §6§kXXX§r§6Lrd§r§bmtns§kXXX§r
 recipemap.steam_wiremill.name=Steam Wiremill
 gregtech.machine.steam_pcb_factory.name=Steam PCB Factory
 recipemap.steam_pcb_factory.name=Steam PCB Factory
