I did fix it tmr o algo + Basic StrandCaster

--- a/src/main/resources/assets/wfcore/lang/en_us.lang
+++ b/src/main/resources/assets/wfcore/lang/en_us.lang
@@ -14,6 +14,8 @@ wfcore.machine.steam_wiremill.tooltip=Lrdshittic coding
 wfcore.machine.largeblastfurnace.name=Large Blast Furnace
 wfcore.machine.largeblastfurnace.tooltip=Made by §6§kXXX§r§6Lrd§r§bmtns§kXXX§r
 recipemap.large_blast_furnace.name=Large Blast Furnace
+wfcore.machine.strandcaster.name=Strand Caster
+wfcore.machine.strandcaster.tooltip=Made by §6§kXXX§r§6Lrd§r§bmtns§kXXX§r
 recipemap.steam_wiremill.name=Steam Wiremill
 gregtech.machine.steam_pcb_factory.name=Steam PCB Factory
 recipemap.steam_pcb_factory.name=Steam PCB Factory
